# 2sem_homework_repo

./: .clang-tidy  CMakeLists.txt  README.md  REAMDE.md
.github/workflows/: build_and_lint.yml
src/AVL-tree/code/: AVL_tree.c  AVL_tree.h  main.c
src/AVL-tree/tests/: tests.c
src/CSV/: graphics.c  graphics.h  parser.c  parser.h  struct.c  struct.h  tools.c  tools.h
src/CSV/code/: graphics.c  graphics.h  main.c  parser.c  parser.h  struct.c  tools.c
src/CSV/test/: test_parser.c  test_struct.c
src/flight_check-in/AVL-tree/code/: AVL_tree.c  AVL_tree.h  airports.txt  main.c
src/flight_check-in/AVL-tree/tests/: tests.c
src/skip_list/code/: skip_list.c  skip_list.h
src/skip_list/presentation/: skip_list.tex
src/state/: state.c  test1.txt  test2.txt  test3.txt
src/state/graph/code/: graph.c  graph.h
src/state/graph/tests/: tests_graph.c
src/state/heap/code/: heap.c  heap.h
src/state/heap/tests/: tests_heap.c
